import { describe, it } from 'node:test';
import assert from 'node:assert/strict';

import { ESLint, type Linter } from 'eslint';
import path from 'node:path';
import { mapEslintMessagesForSnapshot, runOxlint } from '../test-utils.ts';

const eslint = new ESLint();

describe('namespace - each file inside rules must have an error related to that rule', () => {
  interface MessageForSnapshot {
    ruleId: string | null;
    line: number;
  }
  function mapMessagesForSnapshot(
    messages: Array<Linter.LintMessage> | undefined,
  ): Array<MessageForSnapshot> {
    if (!Array.isArray(messages)) return [];
    return messages.map((m) => ({ ruleId: m.ruleId, line: m.line }));
  }

  const rulesFolderPath = import.meta.dirname;

  describe('array-style (function)', async () => {
    const filePath = path.join(rulesFolderPath, 'array-style-function.ts');

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });

  describe('array-style (method)', async () => {
    const filePath = path.join(rulesFolderPath, 'array-style-method.ts');

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });

  it('consistent-import-source', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'consistent-import-source.ts'),
    ]);

    const error = result.at(0)?.messages.at(0);
    assert(error);

    assert.strictEqual(error.line, 1);
    assert.strictEqual(error.ruleId, 'zod/consistent-import-source');

    assert(error.suggestions);
    assert.strictEqual(error.suggestions.length, 1);

    const suggestion = error.suggestions.at(0);
    assert(suggestion);
    assert.strictEqual(suggestion.desc, 'Replace "zod/v3" with "zod"');
    assert.strictEqual(suggestion.messageId, 'replaceSource');
  });

  it('consistent-import', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'consistent-import.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/consistent-import',
          line: 1,
        },
        {
          line: 2,
          ruleId: 'zod/consistent-import',
        },
        {
          line: 3,
          ruleId: 'zod/consistent-import',
        },
      ],
      'should include prefer-namespace-import linting error',
    );
  });

  it('consistent-object-schema-type', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'consistent-object-schema-type.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/consistent-object-schema-type',
          line: 3,
        },
        {
          ruleId: 'zod/consistent-object-schema-type',
          line: 4,
        },
        {
          ruleId: 'zod/consistent-object-schema-type',
          line: 6,
        },
      ],
      'should include consistent-object-schema-type linting error',
    );
  });

  it('no-any-schema', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-any-schema.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          line: 3,
          ruleId: 'zod/no-any-schema',
        },
        {
          line: 5,
          ruleId: 'zod/no-any-schema',
        },
      ],
      'should include no-any-schema linting error',
    );
  });

  it('no-empty-custom-schema', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-empty-custom-schema.ts'),
    ]);

    assert.deepStrictEqual(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          line: 3,
          ruleId: 'zod/no-empty-custom-schema',
        },
        // require-error-message is triggered as side effect
        {
          line: 3,
          ruleId: 'zod/require-error-message',
        },
      ],
      'should include no-empty-custom-schema linting error',
    );
  });

  it('no-number-schema-with-int', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-number-schema-with-int.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/no-number-schema-with-int',
          line: 3,
        },
        {
          ruleId: 'zod/no-number-schema-with-int',
          line: 4,
        },
        {
          ruleId: 'zod/no-number-schema-with-int',
          line: 5,
        },
      ],
      'should include no-number-schema-with-int linting error',
    );
  });

  it('no-optional-and-default-together', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-optional-and-default-together.ts'),
    ]);

    assert.deepStrictEqual(
      result[0]?.messages.map((m) => m.ruleId),
      ['zod/no-optional-and-default-together'],
      'should include no-optional-and-default-together linting error',
    );
  });

  it('no-string-schema-with-uuid', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-string-schema-with-uuid.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/no-string-schema-with-uuid',
          line: 3,
        },
      ],
      'should include no-string-schema-with-uuid linting error',
    );
  });

  it('no-throw-in-refine', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-throw-in-refine.ts'),
    ]);

    assert.deepStrictEqual(
      result[0]?.messages.map((m) => m.ruleId),
      ['zod/no-throw-in-refine'],
      'should include no-throw-in-refine linting error',
    );
  });

  it('no-unknown-schema', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'no-unknown-schema.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/no-unknown-schema',
          line: 3,
        },
      ],
      'should include no-unknown-schema linting error',
    );
  });

  it('prefer-enum-over-literal-union', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'prefer-enum-over-literal-union.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/prefer-enum-over-literal-union',
          line: 3,
        },
        {
          line: 7,
          ruleId: 'zod/prefer-enum-over-literal-union',
        },
      ],
      'should include prefer-enum-over-literal-union linting error',
    );
  });

  it('prefer-meta-last', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'prefer-meta-last.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/prefer-meta-last',
          line: 3,
        },
        {
          ruleId: 'zod/prefer-meta-last',
          line: 14,
        },
      ],
      'should include prefer-meta-last linting error',
    );
  });

  it('prefer-meta', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'prefer-meta.ts'),
    ]);

    assert.deepStrictEqual(
      result[0]?.messages.map((m) => m.ruleId),
      ['zod/prefer-meta'],
      'should include prefer-meta linting error',
    );
  });

  it('require-error-message', async () => {
    const result = await eslint.lintFiles([
      path.join(rulesFolderPath, 'require-error-message.ts'),
    ]);

    assert.deepStrictEqual<Array<MessageForSnapshot>>(
      mapMessagesForSnapshot(result.at(0)?.messages),
      [
        {
          ruleId: 'zod/require-error-message',
          line: 4,
        },
        {
          ruleId: 'zod/require-error-message',
          line: 5,
        },
        {
          ruleId: 'zod/require-error-message',
          line: 8,
        },
        {
          ruleId: 'zod/require-error-message',
          line: 9,
        },
      ],
      'should include require-error-message linting error',
    );
  });

  it('require-schema-suffix', async () => {
    const filePath = path.join(rulesFolderPath, 'require-schema-suffix.ts');

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });

  describe('schema-error-property-style', async () => {
    const filePath = path.join(
      rulesFolderPath,
      'schema-error-property-style.ts',
    );

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });

  describe('prefer-string-schema-with-trim', async () => {
    const filePath = path.join(
      rulesFolderPath,
      'prefer-string-schema-with-trim.ts',
    );

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });

  describe('require-brand-type-parameter', async () => {
    const filePath = path.join(
      rulesFolderPath,
      'require-brand-type-parameter.ts',
    );

    it('eslint', async (t) => {
      const result = await eslint.lintFiles([filePath]);

      const messages = mapEslintMessagesForSnapshot(result.at(0)?.messages);
      t.assert.snapshot(messages);
    });

    it('oxlint', async (t) => {
      const { code, diagnostics } = await runOxlint(filePath);

      assert.equal(code, 1);
      t.assert.snapshot(diagnostics);
    });
  });
});
